RESOLVED FIXED217489
AX: Website Warning page is inaccessible
https://bugs.webkit.org/show_bug.cgi?id=217489
Summary AX: Website Warning page is inaccessible
chris fleizach
Reported 2020-10-08 12:50:43 PDT
VoiceOver will not navigate a page like https://testsafebrowsing.appspot.com/s/malware.html that shows a website warning <rdar://problem/70060483>
Attachments
patch (2.04 KB, patch)
2020-10-08 14:09 PDT, chris fleizach
no flags
chris fleizach
Comment 1 2020-10-08 14:09:54 PDT
EWS
Comment 2 2020-10-08 21:02:53 PDT
Committed r268246: <https://trac.webkit.org/changeset/268246> All reviewed patches have been landed. Closing bug and clearing flags on attachment 410881 [details].
Note You need to log in before you can comment on or make changes to this bug.