AX: Website Warning page is inaccessible https://bugs.webkit.org/show_bug.cgi?id=217489

Reviewed by Zalan Bujtas.

If we have a safe browsing window, we need to use that instead of the content view.

* UIProcess/Cocoa/WKSafeBrowsingWarning.h:
* UIProcess/Cocoa/WebViewImpl.mm:
(WebKit::WebViewImpl::accessibilityAttributeValue):


Canonical link: https://commits.webkit.org/230279@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268246 268f45cc-cd09-0410-ab3c-d52691b4dbfc